@@ -1,3 +1,8 @@
+2008-05-31  Badlop  <badlop@process-one.net>
+
+	* src/odbc/odbc_queries.erl (del_user_return_password): Return
+	password (thanks to Oleg Palij)
+
 2008-05-22  Badlop  <badlop@process-one.net>
 
 	* README: R12 support: remove compilation warning (EJAB-630)
